@@ -126,6 +126,9 @@ Release 2.7.3 - UNRELEASED
 
     HDFS-9880. TestDatanodeRegistration fails occasionally (kihwal)
 
+    HDFS-9766. TestDataNodeMetrics#testDataNodeTimeSpend fails intermittently.
+    (Xiao Chen via aajisaka)
+
 Release 2.7.2 - 2016-01-25
 
   INCOMPATIBLE CHANGES
